feat: preferences addition
